--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 body{
@@ -268,12 +269,187 @@ body{
   line-height: 36px;
 }
 
+.main-3{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom: 0;
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    background-color:rgb(250, 250, 250);
+}
+
+.main-3>h2{
+    font-size: 20px;
+    margin-left: 10px;
+    color: #3b3c3f;
+}
+
+.main-3-01{
+    margin-left: 10px;
+    width: 2.2em;
+    height: 2.2em;
+}
+
+.main-3-02{
+    background: #F5F7FE;
+    border:1px solid rgb(228 228 228);
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom-right-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+.main-3-03{
+    height: 500px;
+    display: grid;
+    grid-template-columns:120px 904px;
+    grid-template-rows: 60px 440px;
+    grid-template-areas:
+    "main-3-04 container"
+    "nav-3 container"
+    ;
+}
+.nav-3{
+    display: flex;
+    flex-direction: column;
+    background: #F5F7FE;
+    grid-area: nav-3;
+    margin: 20px 0;
+}
+.nav-3>li{
+    color: #3b3c3f;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 15px 0;
+    text-align: center;
+    transition: all .4s;
+}
+
+.nav-3>li:hover{
+    cursor:pointer;
+}
 
 
+.main-3-active.nav-3-1{
+    color: #297be6;
+    font-weight: 600;
+    background: white;
+}
+.main-3-active.nav-3-2{
+    color: #297be6;
+    font-weight: 600;
+    background: white;
+}
+.main-3-active.nav-3-3{
+    color: #297be6;
+    font-weight: 600;
+    background: white;
+}
+.main-3-active.nav-3-4{
+    color: #297be6;
+    font-weight: 600;
+    background: white;
+}
+.main-3-active.nav-3-5{
+    color: #297be6;
+    font-weight: 600;
+    background: white;
+}
 
+.container1.main-3-active1{
+    visibility: visible;
+}
+.container2.main-3-active1{
+    visibility: visible;
+}
+.container3.main-3-active1{
+    visibility: visible;
+}
+.container4.main-3-active1{
+    visibility: visible;
+}
+.container5.main-3-active1{
+    visibility: visible;
+}
 
+.container1{
+    background: white;
+    border-radius: 6px;
+    grid-area: container;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    visibility: hidden;
+    justify-content: center;
+    align-items: center;
+}
+.container2{
+    background: white;
+    border-radius: 6px;
+    grid-area: container;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    visibility: hidden;
+    justify-content: center;
+    align-items: center;
+}
+.container3{
+    background: white;
+    border-radius: 6px;
+    grid-area: container;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    visibility: hidden;
+    justify-content: center;
+    align-items: center;
+}
+.container4{
+    background: white;
+    border-radius: 6px;
+    grid-area: container;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    visibility: hidden;
+    justify-content: center;
+    align-items: center;
+}
+.container5{
+    background: white;
+    border-radius: 6px;
+    grid-area: container;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    visibility: hidden;
+    justify-content: center;
+    align-items: center;
+}
 
+.main-3-04{
+    grid-area: main-3-04;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 20px;
+}
 
+.main-3-04>img{
+    width:40px;
+}
 
 
 
